--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -22,11 +22,22 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/contests/">Контесты</a>
                 </li>
-              </ul>
+            </ul>
+            {% if user_logged_in %}
+            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                <li class="nav-item">{{ user_login }}</li>
+            </ul>
+            <form method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger d-none d-lg-inline-block mb-3 mb-md-0 ml-md-3" name="misc_action" id="logout" value="logout">Выйти</button>
+            </form>
+            {% else %}
+            <a href="/login/" class="btn btn-primary d-none d-lg-inline-block mb-3 mb-md-0 ml-md-3">Войти</a>
+            {% endif %}
         </div>
     </div>
 </nav>
-<div class="container" role="main">
+<div class="container {% block content_extra_classes %}{% endblock %}" role="main">
     <div class="page-header">
         <h1>{% block title %}{% endblock %}</h1>
     </div>
